--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,24 @@ main{
   height: 100%;
 }
 footer{
-  width: 100%;
   position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
   background: whitesmoke;
 }
 header{
-  width: 100%;
   position: absolute;
+  display: flex;
+  justify-content: space-around;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
   background: whitesmoke;
+}
+footer div{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
